Add OAuth protection for Locations, add logout route, update Swagger login/logout, add validation updates, add Jest tests
